--- a/CardviewExample/app/build.gradle
+++ b/CardviewExample/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 25
     buildToolsVersion "25.0.0"
     defaultConfig {
-        applicationId "com.bitjini.samplereimburse"
+        applicationId "com.example.spoorthi.cardviewexample"
         minSdkVersion 19
         targetSdkVersion 25
         versionCode 1
@@ -25,8 +25,5 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:25.2.0'
-    compile 'com.android.support:design:25.2.0'
-    compile 'com.android.support.constraint:constraint-layout:1.0.0'
-    compile 'com.android.support:support-v4:25.2.0'
     testCompile 'junit:junit:4.12'
 }
