--- a/SampleReimburse/app/src/main/AndroidManifest.xml
+++ b/SampleReimburse/app/src/main/AndroidManifest.xml
@@ -14,7 +14,6 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <activity android:name=".SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -26,10 +25,11 @@
         <activity
             android:name=".HomePage"
             android:label="@string/title_activity_home_page"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
-        <activity android:name=".SignUpActivity"
-            android:windowSoftInputMode="adjustPan"></activity>
-
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".SignUpActivity"
+            android:windowSoftInputMode="adjustPan" />
+        <activity android:name=".PendingBillActivity"></activity>
     </application>
 
 </manifest>
